# ComputerVision2021

lab01/: CMakeLists.txt  readme.md
lab01/include/: helper.hpp
lab01/src/: helper.cpp  main.cpp
lab02/: CMakeLists.txt  readme.md
lab02/include/: helper.hpp
lab02/src/: helper.cpp  main.cpp
lab03/: CMakeLists.txt  readme.md
lab03/include/: filter.h  helper_filter.h  helper_hist.h
lab03/src/: filter.cpp  helper_filter.cpp  helper_hist.cpp  main_filter.cpp  main_hist.cpp  main_morph.cpp
lab04/: CMakeLists.txt  readme.md
lab04/include/: helper.h
lab04/src/: helper.cpp  main.cpp
lab05/: CMakeLists.txt
lab05/src/: main.cpp
lab06/: CMakeLists.txt
lab06/include/: ObjectTracker.h
lab06/src/: ObjectTracker.cpp  mainCamera.cpp  mainVideo.cpp
