cmake_minimum_required(VERSION 3.17)
project(lab03)
set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} include)
add_executable(lab03_histogram src/main_hist.cpp src/helper_hist.cpp)
target_link_libraries(lab03_histogram ${OpenCV_LIBS})
add_executable(lab03_filter src/main_filter.cpp src/filter.cpp src/helper_filter.cpp)
target_link_libraries(lab03_filter ${OpenCV_LIBS})
add_executable(lab03_morph src/main_morph.cpp)
target_link_libraries(lab03_morph ${OpenCV_LIBS})
