cmake_minimum_required(VERSION 3.17)
project(lab06)
set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} include)
add_executable(lab06_video src/mainVideo.cpp src/ObjectTracker.cpp)
add_executable(lab06_camera src/mainCamera.cpp src/ObjectTracker.cpp)
target_link_libraries(lab06_video ${OpenCV_LIBS})
target_link_libraries(lab06_camera ${OpenCV_LIBS})
